[gd_scene load_steps=26 format=2]

[ext_resource path="res://planta_nivel.png" type="Texture" id=1]
[ext_resource path="res://Botao_Manual_Automatico_ON.png" type="Texture" id=2]
[ext_resource path="res://Controle_Nivel.gd" type="Script" id=3]
[ext_resource path="res://Nivel.png" type="Texture" id=4]
[ext_resource path="res://Button_On.png" type="Texture" id=5]
[ext_resource path="res://Button_Off.png" type="Texture" id=6]
[ext_resource path="res://Manometro_visor.png" type="Texture" id=7]
[ext_resource path="res://Manometro_ponteiro.png" type="Texture" id=8]
[ext_resource path="res://Botao_Manual_Automatico_OFF.png" type="Texture" id=9]
[ext_resource path="res://Chave_seletora_CRL_zero_graus.png" type="Texture" id=10]
[ext_resource path="res://Chave_seletora_CRL.png" type="Texture" id=11]
[ext_resource path="res://slider_btn_en_red.png" type="Texture" id=12]
[ext_resource path="res://slider_btn_dis_red.png" type="Texture" id=13]
[ext_resource path="res://slider_btn_dis_green.png" type="Texture" id=14]
[ext_resource path="res://slider_btn_en_green.png" type="Texture" id=15]
[ext_resource path="res://Botao_OnOff_OFF.png" type="Texture" id=16]
[ext_resource path="res://Botao_OnOff_ON.png" type="Texture" id=17]

[sub_resource type="StyleBoxFlat" id=9]
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.0470588, 0.0470588, 0.0470588, 1 )

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0.142857, 0.48, 0.908571 )
colors = PoolColorArray( 0.433333, 0.433333, 0.433333, 1, 0.417765, 0.417765, 0.417765, 1, 0.286824, 0.286824, 0.286824, 1 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.980392, 0.054902, 0.270588, 1 )
border_width_left = 15
border_width_right = 15
border_color = Color( 0.0392157, 0.0392157, 0.0392157, 1 )
border_blend = true
expand_margin_left = 5.0
expand_margin_right = 5.0
expand_margin_top = 5.0
expand_margin_bottom = 5.0

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.0156863, 0.854902, 0.0509804, 1 )
border_width_left = 15
border_width_right = 15
border_color = Color( 0.0392157, 0.0392157, 0.0392157, 1 )
border_blend = true
expand_margin_left = 5.0
expand_margin_right = 5.0
expand_margin_top = 5.0
expand_margin_bottom = 5.0

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.0470588, 0.0470588, 0.0470588, 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.0509804, 0, 0.898039, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.0470588, 0.0470588, 0.0470588, 1 )

[node name="Controle_Nivel" type="Node"]
script = ExtResource( 3 )
nivel = 50

[node name="Planta_Nivel" type="Node2D" parent="."]

[node name="Planta" type="Sprite" parent="Planta_Nivel"]
position = Vector2( 504.755, 358.557 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Conteudo_Nivel" type="Sprite" parent="Planta_Nivel/Planta"]
position = Vector2( 270.213, 96.5001 )
rotation = 3.14159
scale = Vector2( 1.01075, 0.99692 )
texture = ExtResource( 4 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 128, 500 )
region_filter_clip = true
__meta__ = {
"_edit_lock_": true
}

[node name="OnOff_TextureButton" type="TextureButton" parent="Planta_Nivel/Planta"]
margin_left = -248.087
margin_top = -144.638
margin_right = -186.087
margin_bottom = -42.6384
rect_scale = Vector2( 0.3, 0.3 )
mouse_default_cursor_shape = 2
toggle_mode = true
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Chave_Seletora" type="Sprite" parent="Planta_Nivel/Planta"]
position = Vector2( -144.224, -108.725 )
scale = Vector2( 0.23, 0.23 )
texture = ExtResource( 11 )
__meta__ = {
"_edit_lock_": true
}

[node name="btn_seleciona" type="Sprite" parent="Planta_Nivel/Planta/Chave_Seletora"]
position = Vector2( 2.78442, 29.528 )
rotation = 0.523599
texture = ExtResource( 10 )
__meta__ = {
"_edit_lock_": true
}

[node name="lbl_Vazao_Saida" type="Label" parent="Planta_Nivel"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 760.23
margin_top = 443.778
margin_right = 817.23
margin_bottom = 474.778
rect_scale = Vector2( 2, 2 )
text = "Vazão de
saída"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Vazao_saida" type="ProgressBar" parent="Planta_Nivel"]
margin_left = 792.91
margin_top = 694.618
margin_right = 911.909
margin_bottom = 722.618
rect_rotation = -90.0
rect_scale = Vector2( 1.5, 1.5 )
custom_styles/bg = SubResource( 9 )
value = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Controlador" type="Node2D" parent="."]

[node name="ReferenceRect" type="ReferenceRect" parent="Controlador"]
margin_left = 10.5847
margin_top = 2.89775
margin_right = 240.585
margin_bottom = 559.898
border_color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Controlador/ReferenceRect"]
position = Vector2( 116.117, 276.996 )
scale = Vector2( 0.10971, 552.273 )
texture = SubResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="SetPoint_VSlider" type="VSlider" parent="Controlador/ReferenceRect"]
margin_left = 20.0
margin_top = 45.0
margin_right = 80.0
margin_bottom = 345.0
rect_clip_content = true
mouse_default_cursor_shape = 2
custom_icons/grabber_disabled = ExtResource( 13 )
custom_icons/grabber_highlight = ExtResource( 12 )
custom_icons/grabber = ExtResource( 12 )
custom_styles/slider = SubResource( 4 )
custom_styles/grabber_area = SubResource( 5 )
value = 40.0
editable = false
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Vazao_Entrada_VSlider" type="VSlider" parent="Controlador/ReferenceRect"]
margin_left = 160.0
margin_top = 45.0
margin_bottom = 345.0
rect_clip_content = true
mouse_default_cursor_shape = 2
custom_icons/grabber_disabled = ExtResource( 14 )
custom_icons/grabber_highlight = ExtResource( 15 )
custom_icons/grabber = ExtResource( 15 )
custom_styles/slider = SubResource( 6 )
custom_styles/grabber_area = SubResource( 8 )
value = 60.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="ProgressBar" type="ProgressBar" parent="Controlador/ReferenceRect"]
margin_left = 97.0
margin_top = 345.0
margin_right = 300.0
margin_bottom = 375.0
rect_rotation = -90.0
rect_scale = Vector2( 1.5, 1.5 )
custom_styles/bg = SubResource( 7 )
value = 40.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="btn_On_Off" type="TextureButton" parent="Controlador/ReferenceRect"]
margin_left = 25.0
margin_top = 360.0
margin_right = 525.0
margin_bottom = 560.0
rect_scale = Vector2( 0.35, 0.35 )
mouse_default_cursor_shape = 2
toggle_mode = true
texture_normal = ExtResource( 16 )
texture_pressed = ExtResource( 17 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="btn_Man_Auto" type="TextureButton" parent="Controlador/ReferenceRect"]
margin_left = 25.0
margin_top = 440.0
margin_right = 525.0
margin_bottom = 640.0
rect_scale = Vector2( 0.35, 0.35 )
mouse_default_cursor_shape = 2
toggle_mode = true
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="lbl_SP" type="Label" parent="Controlador/ReferenceRect"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 36.48
margin_top = -271.0
margin_right = -173.52
margin_bottom = -257.0
rect_scale = Vector2( 2, 2 )
text = "SP"
align = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="lbl_PV" type="Label" parent="Controlador/ReferenceRect"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 94.3467
margin_top = -271.0
margin_right = -112.653
margin_bottom = -257.0
rect_scale = Vector2( 2, 2 )
text = "PV"
align = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="lbl_MV" type="Label" parent="Controlador/ReferenceRect"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 153.067
margin_top = -271.0
margin_right = -54.933
margin_bottom = -256.0
rect_scale = Vector2( 2, 2 )
text = "MV"
align = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Manometro_visor" type="Sprite" parent="."]
position = Vector2( 420, 470 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 7 )
__meta__ = {
"_edit_lock_": true
}

[node name="Manometro_ponteiro" type="Sprite" parent="."]
position = Vector2( 420, 470 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 8 )
__meta__ = {
"_edit_lock_": true
}
[connection signal="toggled" from="Planta_Nivel/Planta/OnOff_TextureButton" to="." method="_on_OnOff_TextureButton_toggled"]
[connection signal="toggled" from="Controlador/ReferenceRect/btn_On_Off" to="." method="_on_btn_On_Off_toggled"]
[connection signal="toggled" from="Controlador/ReferenceRect/btn_Man_Auto" to="." method="_on_btn_Man_Auto_toggled"]
